# open_api_demo

./: README.md
cpp_example/: CMakeLists.txt  README.md  tts_demo.cc
go_example/: TtsExample.go  go.mod  go.sum
java_example/: pom.xml
java_example/src/main/java/com/mobvoi/open/api/example/: AsrExample.java  AsrTExample_microphone.java  ChatExample.java  CloneExample.java  ImgAsyncExample.java  NlpExample.java  OneboxExample.java  SignatureGenerate.java  TtsExample.java  VideoExample.java
java_example/src/main/java/com/mobvoi/open/api/tool/: HttpClientUtil.java  SignatureUtil.java  SseClient.java
js_example/: .gitignore  README.md  index.html  main.js  package.json  rollup.config.js  tsconfig.json  tts_demo.js
js_example/demo/es6/: index.html  main.js
js_example/demo/umd&iffe/: index.html
js_example/lib/: bundle-cjs.js  bundle-es.js  bundle-umd.js  bundle.js
js_example/server/: server.js
js_example/src/: apis.js  fetchEventSourceCustom.js  index.js
python3_example/: AsrExample.py  ImgExample.py  STtsExample.py  TtsExample.py  VideoExample.py
python_example/: AsrExample.py  NlpExample.py  OneboxExample.py  PinyinExample.py  TtsExample.py
rust_example/: Cargo.toml
rust_example/tts/: Cargo.toml
rust_example/tts/src/: main.rs
